Added some neccessary collumns to the table + created the analysis df

--- a/analysis/analysis/Analysis.ipynb
+++ b/analysis/analysis/Analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 280,
    "id": "23e8362e",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 281,
    "id": "7c015ae7",
    "metadata": {},
    "outputs": [],
@@ -456,6 +456,206 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "7ddcdebf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Total revenue generated from subscriptions and payments.\n",
+    "df_Payments[\"money_value\"].sum()\n",
+    "\n",
+    "# Average revenue per user (ARPU).\n",
+    "df_Payments.groupby(by='user_id')[\"money_value\"].mean()\n",
+    "\n",
+    "# Monthly/quarterly revenue trends.\n",
+    "df_Payments[\"date\"] = pd.to_datetime(df_Payments[\"date\"])\n",
+    "df_Payments[\"month\"] = df_Payments[\"date\"].dt.month\n",
+    "df_Payments[\"quater\"] = df_Payments[\"date\"].dt.quarter\n",
+    "\n",
+    "df_Payments_month_grouped = df_Payments.groupby(by='month')['money_value'].mean()\n",
+    "df_Payments_month_grouped\n",
+    "df_Payments_quater_grouped = df_Payments.groupby(by='quater')[\"money_value\"].mean()\n",
+    "df_Payments_quater_grouped\n",
+    "\n",
+    "# Retention analysis: How many users renew their subscriptions?\n",
+    "df_User_subscriptions_grouped = df_User_subscriptions.groupby(by='user_id')['user_id'].count().reset_index(name='user_id_count')\n",
+    "df_users_that_renue = df_User_subscriptions_grouped[df_User_subscriptions_grouped[\"user_id_count\"] >= 2]\n",
+    "df_users_that_renue[\"user_id\"]\n",
+    "\n",
+    "# Analysis of subscription plans' popularity and contribution to revenue.\n",
+    "df_Payments_plans_merged = df_Payments.merge(df_Subscription_plan_info, how=\"left\", left_on=\"subscription_plan_id\", right_on=\"id\", suffixes=(\"_payment\", \"_subscription_plan\"))\n",
+    "# Revenue contribution\n",
+    "df_Payments_plans_merged_sum = df_Payments_plans_merged.groupby(by=\"plan_name\")[\"money_value\"].sum().reset_index()\n",
+    "df_Payments_plans_merged_sum.plot(kind='bar', x='plan_name', y='money_value')\n",
+    "plt.xlabel(\"Spotify plans\")\n",
+    "plt.ylabel(\"Count\")\n",
+    "plt.title(\"Total revenue by spotify plan\")\n",
+    "\n",
+    "df_Payments_plans_merged_count = df_Payments_plans_merged.groupby(by=\"plan_name\")[\"user_id\"].count().reset_index()\n",
+    "df_Payments_plans_merged_count.plot(kind=\"bar\", x=\"plan_name\", y=\"user_id\")\n",
+    "plt.xlabel(\"Spotify plans\")\n",
+    "plt.ylabel(\"Count\")\n",
+    "plt.title(\"Total buys by spotify plan\")\n",
+    "plt.legend(\"Count\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8f73b108",
+   "metadata": {},
+   "source": [
+    "8. Advanced Analyses\n",
+    "\n",
+    "--Predictive modeling for user churn (e.g., which users are likely to resuscribe?).\n",
+    "Cluster analysis to group users by listening habits or interactions.\n",
+    "--Sentiment analysis on user feedback (if available).\n",
+    "--Song recommendation modeling using collaborative or content-based filtering.\n",
+    "Analysis of artist growth in followers over time.\n",
+    "-Sentiment analysis, predictions model and AI based recommendation in the AI section."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "53997063",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "be0fa5eb",
+   "metadata": {},
+   "source": [
+    "9. Visualizations\n",
+    "\n",
+    "Histograms of song durations, playlist sizes, or subscription prices.\n",
+    "Line charts for trends (e.g., revenue, user registration).\n",
+    "Heatmaps to show correlations (e.g., between user activity metrics and subscription type).\n",
+    "Bar plots for top artists, songs, or genres.\n",
+    "Scatter plots to visualize relationships (e.g., between playlist size and user engagement)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6421cd3b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2b4b78ec",
+   "metadata": {},
+   "source": [
+    "10. Time-Series Analyses\n",
+    "Seasonal trends in song additions or playlist creations.\n",
+    "Forecasting user registrations or subscription revenue.\n",
+    "Peak activity times for user engagement (e.g., by day of the week or time of day)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6844c6a5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "16130358",
+   "metadata": {},
+   "source": [
+    "11. Data Quality and Integrity Checks\n",
+    "\n",
+    "Identifying missing or inconsistent data.\n",
+    "Outlier detection in numeric fields (e.g., unusually high or low payments).\n",
+    "Verifying the integrity of relationships (e.g., ensuring all songs have valid album and artist references)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0c41a3cf",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1b9e472f",
+   "metadata": {},
+   "source": [
+    "12. Comparative Analyses\n",
+    "\n",
+    "Comparing activity levels of regular users vs. premium users.\n",
+    "Comparing genre popularity across user demographics (e.g., age groups).\n",
+    "Comparing subscription trends by plan type."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "be4705ec",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d0f45c1b",
+   "metadata": {},
+   "source": [
+    "13. User Segmentation and Retention\n",
+    "\n",
+    "Analyzing cohorts (e.g., users who signed up in the same month) to study retention patterns.\n",
+    "Segmenting users by activity (e.g., playlist creators vs. passive listeners)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "08918cea",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "145adb76",
+   "metadata": {},
+   "source": [
+    "14. Deep-Dive Analyses\n",
+    "\n",
+    "Analyzing the impact of playlist curation on song popularity.\n",
+    "Exploring how artist collaborations impact song or album success.\n",
+    "Relationship between song popularity and the number of playlists it appears in."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "80cdde21",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c50512bc",
+   "metadata": {},
+   "source": [
+    "15. Scenario-Based Analyses\n",
+    "\n",
+    "What genres are most popular among younger users?\n",
+    "Which subscription plan has the highest renewal rate?\n",
+    "What are the characteristics of users who like a specific artist or genre?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b92b5f78",
    "metadata": {},
    "outputs": [],
    "source": []
